syntax = "proto3";

option csharp_namespace = "BlazorApp1.Shared.Protos";
package WriteT1KaryawanPackage;

service svpWriteT1Karyawan{
	rpc InsertT1Karyawan (InsertT1KaryawanRequest) returns (WriteKaryawanReply);
	rpc UpdateT1Karyawan (UpdateT1KaryawanRequest) returns (WriteKaryawanReply);
	rpc DeleteT1Karyawan (DeleteT1KaryawanRequest) returns (WriteKaryawanReply);
}

message InsertT1KaryawanRequest{
	string IdJabatan = 1;
	string IdDivisiPerusahaan = 2;
	string NamaLengkap = 3;
	string NamaPanggilan = 4;
	string Alamat = 5;
}

message UpdateT1KaryawanRequest{
	string IdKaryawan = 1;
	string IdJabatan = 2;
	string IdDivisiPerusahaan = 3;
	string NamaLengkap = 4;
	string NamaPanggilan = 5;
	string Alamat = 6;
}

message DeleteT1KaryawanRequest{
	string IdKaryawan = 1;
}

message WriteKaryawanReply{
	bool IsOk = 1;
	string Hasil = 2;
}